2004-08-19  Synge Todo <wistaria@comp-phys.org>

	* Added support for MKL 7.0
	
2004-07-22  Synge Todo  <wistaria@comp-phys.org>

        * version 3.0.1 released.

2004-07-09  Synge Todo  <wistaria@comp-phys.org>

	* Fixed random_choice class template.
	
2004-06-25  Synge Todo  <wistaria@comp-phys.org>

	* Added alternating_tensor (Levi-Civita or permutation symbol)
	function in looper/util.h.
	
2004-06-11  Synge Todo  <wistaria@comp-phys.org>

        * version 3.0 released.

2004-06-08  Synge Todo  <wistaria@comp-phys.org>
	
	* Turned off maintainer mode for GNU autotools.
	
2004-06-03  Synge Todo  <wistaria@comp-phys.org>

	* Added new measurement staggered_generalized_susceptibility_imp.
	Renamed generalized_susceptibility_imp as
	uniform_generalized_susceptibility_imp.

2004-05-17  Synge Todo  <wistaria@comp-phys.org>
	
	* Updated automake version to 1.8.5.

2004-05-14  Synge Todo  <wistaria@comp-phys.org>

	* Changed excecutable names (qmc* -> loop*).
	
2004-04-21  Synge Todo  <wistaria@comp-phys.org>

        * Fixed a bug in static_correlation in looper/path_integral.h

2004-04-20  Synge Todo  <wistaria@comp-phys.org>

        * Optimized measurement of staggered susceptibility in SSE.

2004-04-14  Synge Todo  <wistaria@comp-phys.org>

        * Added wrapper and test program for linear least squares solver
        (gels) in LAPACK.

        * Replaced internal matrix representation in xxz_matrix by
        boost::multiarray<>.  Improved fitting algorithm in fit2xxz by
        using the linear least squares solver.
        
2004-04-07  Synge Todo  <wistaria@comp-phys.org>

        * version 3.0b5 released.
        - prerequisites: boost_1_31_0, alps-20040407
        - TODO: optimization, improved estimators, more measurements,
          license issue.  Bug fixes for some mesurements...

2004-04-06  Synge Todo  <wistaria@comp-phys.org>
        
        * Added exact diagonalization checking program.
        