@@ -1,6 +1,0 @@
-m: dimension of problem    : 2
-n: number of basis vectors : 4
-input:  A   = [2,4]((-0.377687,0.184437,0.393917,-0.300257),(-0.226264,0.282122,0.177845,0.275759))
-input:  B   = [2](-0.173067,-0.464916)
-output: X   = [4](0.390144,-0.542795,-0.287569,-0.625049)
-check:  AxX = [2](-0.173067,-0.464916)
