@@ -1,0 +1,21 @@
+m: dimension of problem    : 3
+n: number of basis vectors : 3
+input: A      = [3,3]((0.499061,0.0103544,-0.368467),(-0.464584,0.49247,0.125709),(-0.437408,-0.0892895,-0.365226))
+output: U     = [3,3]((-0.61037,0.253945,0.750307),(0.725455,-0.201129,0.658226),(0.318062,0.946076,-0.0614625))
+output: VT    = [3,3]((-0.899393,0.37155,0.230309),(-0.362176,-0.338328,-0.868541),(0.244786,0.864572,-0.438856))
+output: S     = [3](0.868106,0.534674,0.390266)
+check: U*S*VT = [3,3]((0.499061,0.0103544,-0.368467),(-0.464584,0.49247,0.125709),(-0.437408,-0.0892895,-0.365226))
+m: dimension of problem    : 4
+n: number of basis vectors : 5
+input: A      = [4,5]((0.480872,0.337393,0.465528,-0.278713,-0.0555625),(-0.161929,0.205342,-0.466803,-0.131252,-0.0770257),(0.0891777,-0.188015,0.402081,0.208791,-0.0430425),(0.0411657,-0.427757,-0.271589,-0.288543,0.28509))
+output: U     = [4,4]((0.734202,-0.379652,0.552216,0.108946),(-0.419407,-0.614192,0.00348077,0.668471),(0.354547,0.542713,-0.240782,0.722346),(-0.399177,0.429063,0.798166,0.139619))
+output: VT    = [4,5]((0.458958,0.279573,0.829764,0.0416939,-0.144742),(-0.0271115,-0.858402,0.336586,0.279789,0.266155),(0.485769,-0.191803,-0.102192,-0.764501,0.363778),(0.25348,-0.381067,-0.155963,-0.134086,-0.865004))
+output: S     = [4](0.95032,0.628825,0.568926,0.0564511)
+check: U*S*VT = [4,5]((0.480872,0.337393,0.465528,-0.278713,-0.0555625),(-0.161929,0.205342,-0.466803,-0.131252,-0.0770257),(0.0891777,-0.188015,0.402081,0.208791,-0.0430425),(0.0411657,-0.427757,-0.271589,-0.288543,0.28509))
+m: dimension of problem    : 6
+n: number of basis vectors : 2
+input: A      = [6,2]((0.0226698,-0.342681),(0.244318,-0.257747),(0.212371,0.211391),(0.158173,0.171609),(0.219584,0.0267176),(0.316373,-0.0155871))
+output: U     = [6,2]((0.0295653,-0.674506),(-0.405441,-0.557061),(-0.444202,0.366551),(-0.333824,0.300683),(-0.418851,0.00415011),(-0.592076,-0.0996873))
+output: VT    = [2,2]((-0.993786,-0.111305),(-0.111305,0.993786))
+output: S     = [2](0.528095,0.508632)
+check: U*S*VT = [6,2]((0.0226698,-0.342681),(0.244318,-0.257747),(0.212371,0.211391),(0.158173,0.171609),(0.219584,0.0267176),(0.316373,-0.0155871))
