@@ -1,0 +1,24 @@
+m: dimension of problem    : 3
+n: number of basis vectors : 3
+input: A      = [3,3]((0.499061,0.0103544,-0.368467),(0.49247,0.125709,-0.437408),(-0.365226,0.480872,0.337393))
+input: B      = [3](-0.464584,-0.0892895,0.465528)
+output: X     = [3](-3.7375,0.781132,-3.77935)
+check: A*X    = [3](-0.464584,-0.0892895,0.465528)
+       B      = [3](-0.464584,-0.0892895,0.465528)
+residual      = 0
+m: dimension of problem    : 4
+n: number of basis vectors : 5
+input: A      = [4,5]((-0.278713,-0.0555625,-0.161929,0.205342,-0.466803),(-0.0770257,0.0891777,-0.188015,0.402081,0.208791),(0.0411657,-0.427757,-0.271589,-0.288543,0.28509),(-0.342681,0.244318,-0.257747,0.212371,0.211391))
+input: B      = [4](-0.131252,-0.0430425,0.0226698,0.158173)
+output: X     = [5](-0.289401,0.340808,-0.00522703,-0.371313,0.251874)
+check: A*X    = [4](-0.131252,-0.0430425,0.0226698,0.158173)
+       B      = [4](-0.131252,-0.0430425,0.0226698,0.158173)
+residual      = 0
+m: dimension of problem    : 6
+n: number of basis vectors : 2
+input: A      = [6,2]((0.171609,0.219584),(0.316373,-0.0155871),(0.499526,-0.0255133),(-0.20902,-0.492995),(-0.189469,-0.295013),(0.277102,-0.496022))
+input: B      = [6](0.0267176,-0.118903,0.0740893,-0.473864,-0.422073,-0.250844)
+output: X     = [2](0.152187,0.77103)
+check: A*X    = [6](0.195422,0.0361296,0.0563498,-0.411924,-0.256298,-0.340277)
+       B      = [6](0.0267176,-0.118903,0.0740893,-0.473864,-0.422073,-0.250844)
+residual      = 0.303525
