@@ -1,3 +1,9 @@
+2004-08-20  Synge Todo <wistaria@comp-phys.org>
+
+	* Changed solve_llsp so that the SVD is used instead of QL
+	factorization.  Added test programs gesvd and llsp.  Removed
+	the test program gels.
+	
 2004-08-19  Synge Todo <wistaria@comp-phys.org>
 
 	* Added support for MKL 7.0
